wikimediastories.com/net/org
earlier attempt: If9d427235ddfc7bb403b0ac86a71387ac0166e06

RT: 4942
Change-Id: Id9882e1a8a5927a7074e9d6de386b2d160312de5

--- a/redirects.conf
+++ b/redirects.conf
@@ -135,6 +135,9 @@
         wikimediafoundation.com *.wikimediafoundation.com \
         wikimediafoundation.info *.wikimediafoundation.info \
         wikimediafoundation.net *.wikimediafoundation.net \
+        wikimediastories.com *.wikimediastories.com \
+        wikimediastories.net *.wikimediastories.net \
+        wikimediastories.org *.wikimediastories.org \
         *.wikimediafoundation.org \
         wikimedia.jp.net *.wikimedia.jp.net \
         wikimedia.lt *.wikimedia.lt \
@@ -725,6 +728,10 @@
     # wikipediazero.org - RT #5039
     RewriteCond %{HTTP_HOST} (.*)wikipediazero.org$
     RewriteRule ^(.*)$ http://wikimediafoundation.org/wiki/Wikipedia_Zero [R=301,L,NE]
+
+    # wikimediastories.com/net/org - RT #4942
+    RewriteCond %{HTTP_HOST} (?:^|\.)wikimediastories.(?:com|net|org)$
+    RewriteRule . http://wikimediafoundation.org/wiki/Thank_You_All [R=301,L]
 
     # jobs/careers - RT #5709
     RewriteCond %{HTTP_HOST} ^(.*\.|)(careers|jobs)\.wikipedia\.org$
