wikimediastories.com/net/org
earlier attempt: If9d427235ddfc7bb403b0ac86a71387ac0166e06

RT: 4942
Change-Id: Id9882e1a8a5927a7074e9d6de386b2d160312de5

--- a/redirects.conf
+++ b/redirects.conf
@@ -135,6 +135,9 @@
         wikimediafoundation.com *.wikimediafoundation.com \
         wikimediafoundation.info *.wikimediafoundation.info \
         wikimediafoundation.net *.wikimediafoundation.net \
+        wikimediastories.com *.wikimediastories.com \
+        wikimediastories.net *.wikimediastories.net \
+        wikimediastories.org *.wikimediastories.org \
         *.wikimediafoundation.org \
         wikimedia.jp.net *.wikimedia.jp.net \
         wikimedia.lt *.wikimedia.lt \
@@ -730,6 +733,10 @@
     RewriteCond %{HTTP_HOST} ^(.*\.|)(careers|jobs)\.wikipedia\.org$
     RewriteRule ^/$ http://wikimediafoundation.org/wiki/Work_with_us [R=301,L,NE]
     RewriteRule ^/(.*)$ http://wikimediafoundation.org/wiki/Job_openings/$1 [R=301,L,NE]
+
+    # wikimediastories.com/net/org - RT #4942
+    RewriteCond %{HTTP_HOST} (?:^|\.)wikimediastories.(?:com|net|org)$
+    RewriteRule . http://wikimediafoundation.org/wiki/Thank_You_All [R=301,L]
 
     # Send anything else that matched the ServerAlias to en.wikipedia.org
     RewriteRule ^(.*)$ http://en.wikipedia.org$1 [R=301,L,NE]
