--- a/wikimedia.conf
+++ b/wikimedia.conf
@@ -143,6 +143,12 @@
 	php_admin_flag engine off
     </IfModule>
 
+    <Files "/usr/local/apache/common/docroot/wikimedia.org/w/404.php">
+       <IfModule mod_php5.c>
+           php_admin_flag engine on
+        </IfModule>
+    </Files>
+
     # Used for Firefox OS web application manifest living on bits.wikimedia.org
     AddType application/x-web-app-manifest+json .webapp
 </VirtualHost>
