--- a/redirects.conf
+++ b/redirects.conf
@@ -690,6 +690,10 @@
     RewriteCond %{HTTP_HOST} wikimedia\.com$
     RewriteRule . http://wikimedia.org/ [R=301,L]
 
+    # wikimedia.us redirect
+    RewriteCond %{HTTP_HOST} wikimedia\.us$
+    RewriteRule . http://wikimedia.org/ [R=301,L]
+
     # wikipedia typo domains to www. instead of en - RT #4679,#4681
     RewriteCond %{HTTP_HOST} wiikipedia\.com$ [OR]
     RewriteCond %{HTTP_HOST} wekipedia\.com$
