RT#4416 wikimedia.us redirection
Change-Id: I295be5d21f44a89f4df8d1b983acbe4b77b9b079

--- a/redirects.conf
+++ b/redirects.conf
@@ -131,6 +131,7 @@
         wikimediacommons.pt *.wikimediacommons.pt \
         wikimedia.com *.wikimedia.com \
         wikimedia.ee *.wikimedia.ee \
+        wikimedia.us *.wikimedia.us \
         wikimediafoundation.com *.wikimediafoundation.com \
         wikimediafoundation.info *.wikimediafoundation.info \
         wikimediafoundation.net *.wikimediafoundation.net \
@@ -688,6 +689,10 @@
 
     # wikimedia.com redirect
     RewriteCond %{HTTP_HOST} wikimedia\.com$
+    RewriteRule . http://wikimedia.org/ [R=301,L]
+
+    # wikimedia.us redirect
+    RewriteCond %{HTTP_HOST} wikimedia\.us$
     RewriteRule . http://wikimedia.org/ [R=301,L]
 
     # wikipedia typo domains to www. instead of en - RT #4679,#4681
