wikipediastories.com/net/org
fu Id9882e1a8a5927a7074e9d6de386b2d160312de5

RT: 4942
Change-Id: Ie16e2cf117fbe6112f07470eade3acb9099b2aa5

--- a/redirects.conf
+++ b/redirects.conf
@@ -138,6 +138,9 @@
         wikimediastories.com *.wikimediastories.com \
         wikimediastories.net *.wikimediastories.net \
         wikimediastories.org *.wikimediastories.org \
+        wikipediastories.com *.wikipediastories.com \
+        wikipediastories.net *.wikipediastories.net \
+        wikipediastories.org *.wikipediastories.org \
         *.wikimediafoundation.org \
         wikimedia.jp.net *.wikimedia.jp.net \
         wikimedia.lt *.wikimedia.lt \
@@ -730,7 +733,7 @@
     RewriteRule ^(.*)$ http://wikimediafoundation.org/wiki/Wikipedia_Zero [R=301,L,NE]
 
     # wikimediastories.com/net/org - RT #4942
-    RewriteCond %{HTTP_HOST} (?:^|\.)wikimediastories.(?:com|net|org)$
+    RewriteCond %{HTTP_HOST} (?:^|\.)wiki[mp]ediastories.(?:com|net|org)$
     RewriteRule . http://wikimediafoundation.org/wiki/Thank_You_All [R=301,L]
 
     # jobs/careers - RT #5709
