--- a/wikimedia.conf
+++ b/wikimedia.conf
@@ -68,10 +68,16 @@
     Alias /skins/ /usr/local/apache/common/php/skins/
 
     Alias /images/ /apache/common/images/
-    Alias /centralnotice/ /mnt/upload6/centralnotice/
-    <IfModule mod_php5.c>
-	php_admin_flag engine off
-    </IfModule>
+    <Directory "/usr/local/apache/common/docroot/bits/w">
+       <IfModule mod_php5.c>
+           php_admin_flag engine on
+        </IfModule>
+    </Directory>
+    <Directory "/usr/local/apache/common/docroot/bits/w/extensions">
+       <IfModule mod_php5.c>
+           php_admin_flag engine off
+        </IfModule>
+    </Directory>
 
     # Used for Firefox OS web application manifest living on bits.wikimedia.org
     AddType application/x-web-app-manifest+json .webapp
