redirect pk.wikimedia.org to wikimediapakistan.org (bug 54780)
Change-Id: I82c55ea23bd7bb395c016d0b0a8ab97f2014cd36

--- a/redirects.conf
+++ b/redirects.conf
@@ -59,6 +59,7 @@
         nb.wikipedia.org tp.wikipedia.org \
         nostalgia.wikimedia.org \
         pa.us.wikimedia.org \
+        pk.wikimedia.org \
         pt.wikimedia.org \
         quality.wikipedia.org quality.wikipedia.com \
         quote.wikipedia.org \
@@ -658,6 +659,11 @@
 
     RewriteCond %{HTTP_HOST} =ve.wikimedia.org
     RewriteRule ^(.*)$ http://wikimedia.org.ve$1 [R=302,L,NE]
+
+    # pk.wikimedia.org to wikimediapakistan.org (bug 54780)
+
+    RewriteCond %{HTTP_HOST} =pk.wikimedia.org
+    RewriteRule . http://www.wikimediapakistan.org/ [R=301,L,NE]
 
     # pt.wikimedia.org got moved to wikimedia.pt
 
