redirect vikipedi[a].com.tr to tr.wikipedia.org
redirect vikipedi.com.tr and vikipedia.com.tr to
the Turkish Wikipedia

RT #5928

Change-Id: I9c1f068241c26c76259048034c89050bb94d6eb2

--- a/redirects.conf
+++ b/redirects.conf
@@ -83,6 +83,8 @@
         textbook.wikipedia.org \
         ve.wikimedia.org \
         vikimedija.org *.vikimedija.org \
+        vikipedi.com.tr *.vikipedi.com.tr \
+        vikipedia.com.tr *.vikipedia.com.tr \
         visualwikipedia.com *.visualwikipedia.com \
         visualwikipedia.net *.visualwikipedia.net \
         voyagewiki.com *.voyagewiki.com \
@@ -723,6 +725,10 @@
     # wikipedia.in
     RewriteCond %{HTTP_HOST} (.*)wikipedia\.in$
     RewriteRule ^(.*)$ http://wikimedia.in/wikipedia.html [R=301,L]
+
+    # vikipedi.com.tr & vikipedia.com.tr - RT #5928
+    RewriteCond %{HTTP_HOST} (.*)vikipedi[a]\.com\.tr$
+    RewriteRule ^(.*)$ http://tr.wikipedia.org [R=301,L]
 
     # coffee - keep for historic reasons:)
     RewriteCond %{HTTP_HOST} =coffee.wikimedia.org
