Rename www portals files to drop wikipedia from name
Change-Id: Iad97b278ec5a3d733437b5fce1c1c0d2f9d2c439

--- a/all.conf
+++ b/all.conf
@@ -5,8 +5,8 @@
 # In particular, this must be the first virtual subdomain:
 Include /etc/apache2/wmf/nonexistent.conf
 
-# www.wikipedia.org
-Include /etc/apache2/wmf/www.wikipedia.conf
+# www.wikipedia.org and other portals
+Include /etc/apache2/wmf/wwwportals.conf
 
 # Redirects also must override *.wikipedia.org
 Include /etc/apache2/wmf/redirects.conf
