fix redirects for jobs/careers.wm.org
the second RewriteRule matched more than it should have,
typo domains that are ServerNames but don't have explicit rules
ended up here instead of on wp

has separate redirects to "Work_with_us" and
"Job_openings/<number>".

Change-Id: Ib50f61312e5cf1ceb940f99de7b22e3ed9830f56
re: RT #5709

--- a/redirects.conf
+++ b/redirects.conf
@@ -744,6 +744,7 @@
     # jobs/careers - RT #5709
     RewriteCond %{HTTP_HOST} ^(.*\.|)(careers|jobs)\.wikipedia\.org$
     RewriteRule ^/$ http://wikimediafoundation.org/wiki/Work_with_us [R=301,L,NE]
+    RewriteCond %{HTTP_HOST} ^(.*\.|)(careers|jobs)\.wikipedia\.org$
     RewriteRule ^/(.*)$ http://wikimediafoundation.org/wiki/Job_openings/$1 [R=301,L,NE]
 
     # Send anything else that matched the ServerAlias to en.wikipedia.org
