--- a/main.conf
+++ b/main.conf
@@ -219,7 +219,7 @@
     RewriteRule ^/upload/(.*)$ http://upload.wikimedia.org/wikiquote/%1/$1 [R=302]
 
     # Send www.de.wikiquote.org -> de.wikiquote.org
-    RewriteCond %{HTTP_HOST} www.([a-z-]+).wikiquote.(com|net|org)
+    RewriteCond %{HTTP_HOST} ^www\.([a-z-]+)\.wikiquote\.org$
     RewriteRule ^(.*)$ http://%1.wikiquote.org$1 [R=301,L]
 
     # Primary wiki redirector:
@@ -377,7 +377,7 @@
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
     # Send www.de.wikipedia.org -> de.wikipedia.org
-    RewriteCond %{HTTP_HOST} www.([a-z-]+).wikipedia.(com|net|org)
+    RewriteCond %{HTTP_HOST} ^www\.([a-z-]+)\.wikipedia\.org$
     RewriteRule ^(.*)$ http://%1.wikipedia.org$1 [R=301,L]
 
     # static -> $lang/static
@@ -434,7 +434,7 @@
     RewriteRule ^/s/.*$ /w/index.php
 
     # Send www.de.wikibooks.org -> de.wikibooks.org
-    RewriteCond %{HTTP_HOST} www.([a-z-]+).wikibooks.(com|net|org)
+    RewriteCond %{HTTP_HOST} ^www\.([a-z-]+)\.wikibooks\.org$
     RewriteRule ^(.*)$ http://%1.wikibooks.org$1 [R=301,L]
 
     # Uploads to the host-specific directory
@@ -503,7 +503,7 @@
     RewriteRule ^/s/.*$ /w/index.php
 
     # Send www.de.wikisource.org -> de.wikisource.org
-    RewriteCond %{HTTP_HOST} www.([a-z-]+).wikisource.(com|net|org)
+    RewriteCond %{HTTP_HOST} ^www\.([a-z-]+)\.wikisource\.org$
     RewriteRule ^(.*)$ http://%1.wikisource.org$1 [R=301,L]
 
     # Uploads to the host-specific directory
@@ -572,7 +572,7 @@
     RewriteRule ^/s/.*$ /w/index.php
 
     # Send www.de.wikinews.org -> de.wikinews.org
-    RewriteCond %{HTTP_HOST} www.([a-z-]+).wikinews.(com|net|org)
+    RewriteCond %{HTTP_HOST} ^www\.([a-z-]+)\.wikinews\.org$
     RewriteRule ^(.*)$ http://%1.wikinews.org$1 [R=301,L]
 
     # Uploads to the host-specific directory
@@ -642,7 +642,7 @@
     RewriteRule ^/s/.*$ /w/index.php
 
     # Send www.de.wikiversity.org -> de.wikiversity.org
-    RewriteCond %{HTTP_HOST} www.([a-z-]+).wikiversity.(com|net|org)
+    RewriteCond %{HTTP_HOST} ^www\.([a-z-]+)\.wikiversity\.org$
     RewriteRule ^(.*)$ http://%1.wikiversity.org$1 [R=301,L]
 
     # Uploads to the host-specific directory
