Set one a one-year Cache-control: max-age header for fonts.
Sets "Cache-control: max-age=31536000" header for font files under
docroot/bits/w/extensions. Font files are detected by their extension, using a
<FilesMatch> directive. Font extensions are ttf, eot and woff.
This is primarily intended for UniversalLanguageSelector.

Change-Id: Id362b24ab01482dcd16b1c7f43e52b38de06a975

--- a/wikimedia.conf
+++ b/wikimedia.conf
@@ -77,6 +77,12 @@
        <IfModule mod_php5.c>
            php_admin_flag engine off
         </IfModule>
+        <IfModule mod_headers.c>
+            <FilesMatch "\.(eot|ttf|woff)$">
+                # Cache fonts for a year.
+                Header set Cache-control "max-age=31536000"
+            </FilesMatch>
+        </IfModule>
     </Directory>
 
     # Used for Firefox OS web application manifest living on bits.wikimedia.org
