--- a/wwwportals.conf
+++ b/wwwportals.conf
@@ -4,7 +4,7 @@
 </VirtualHost>
 
 <VirtualHost *>
-    DocumentRoot "/usr/local/apache/common/docroot/www.wikipedia.org"
+    DocumentRoot /usr/local/apache/common/docroot/wwwportal
     ServerName www.wikipedia.org
 
     RewriteEngine On
@@ -23,7 +23,6 @@
     RewriteRule ^/(upload|wiki|stats|w)/(.*)$ http://en.wikipedia.org/$1/$2 [R=301,L]
     RewriteRule ^/wiki$ http://en.wikipedia.org/ [R=301,L]
 
-
     # Mailing lists...
     RewriteRule ^/(mailman|pipermail)(.*)$ http://mail.wikipedia.org/$1$2 [R=301,L]
 
@@ -36,7 +35,6 @@
     RewriteRule ^(.*)$ http://en.wikipedia.org$1 [R=301,L]
 
     php_admin_flag engine on
-
 </VirtualHost>
 
 <VirtualHost *>
@@ -47,7 +45,7 @@
 <VirtualHost *>
     ServerName www.wiktionary.org
 
-    DocumentRoot /usr/local/apache/common/docroot/www.wiktionary.org
+    DocumentRoot /usr/local/apache/common/docroot/wwwportal
     php_admin_flag engine on
 
     RewriteEngine On
@@ -70,7 +68,7 @@
 <VirtualHost *>
     ServerName www.wikinews.org
 
-    DocumentRoot /usr/local/apache/common/docroot/www.wikinews.org
+    DocumentRoot /usr/local/apache/common/docroot/wwwportal
     php_admin_flag engine on
 
     RewriteEngine On
@@ -93,7 +91,7 @@
 <VirtualHost *>
     ServerName www.wikiquote.org
 
-    DocumentRoot /usr/local/apache/common/docroot/www.wikiquote.org
+    DocumentRoot /usr/local/apache/common/docroot/wwwportal
     php_admin_flag engine on
 
     RewriteEngine On
@@ -112,7 +110,7 @@
     ServerName www.wikiversity.org
     ServerAlias wikiversity.org
 
-    DocumentRoot /usr/local/apache/common/docroot/www.wikiversity.org
+    DocumentRoot /usr/local/apache/common/docroot/wwwportal
     php_admin_flag engine on
 
     RewriteEngine On
@@ -127,7 +125,6 @@
     RewriteRule ^(.*)$ http://en.wikiversity.org$1 [R=301,L]
 </VirtualHost>
 
-
 <VirtualHost *>
     ServerName wikibooks.org
     Redirect permanent / http://www.wikibooks.org/
@@ -136,7 +133,7 @@
 <VirtualHost *>
     ServerName www.wikibooks.org
 
-    DocumentRoot /usr/local/apache/common/docroot/www.wikibooks.org
+    DocumentRoot /usr/local/apache/common/docroot/wwwportal
     php_admin_flag engine on
 
     RewriteEngine On
@@ -159,7 +156,7 @@
 <VirtualHost *>
     ServerName www.wikivoyage.org
 
-    DocumentRoot /usr/local/apache/common/docroot/www.wikivoyage.org
+    DocumentRoot /usr/local/apache/common/docroot/wwwportal
     php_admin_flag engine on
 
     RewriteEngine On
