--- a/main.conf
+++ b/main.conf
@@ -56,7 +56,7 @@
 <VirtualHost *>
     ServerName test.wikidata.org
 
-    DocumentRoot "/usr/local/apache/common/docroot/testwikidata"
+    DocumentRoot "/usr/local/apache/common/docroot/wikidata"
 
     AllowEncodedSlashes On
 
@@ -66,19 +66,19 @@
     RewriteRule ^/robots.txt$ /w/robots.php [L]
 
     # Primary wiki redirector:
-    Alias /wiki /usr/local/apache/common/docroot/testwikidata/w/index.php
+    Alias /wiki /usr/local/apache/common/docroot/wikidata/w/index.php
     RewriteRule ^/$ /w/index.php
     RewriteRule ^/w/$ /w/index.php
 
     # Configurable favicon
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
-    <Directory "/usr/local/apache/common/docroot/testwikidata/w">
+    <Directory "/usr/local/apache/common/docroot/wikidata/w">
        <IfModule mod_php5.c>
            php_admin_flag engine on
         </IfModule>
     </Directory>
-    <Directory "/usr/local/apache/common/docroot/testwikidata/w/extensions">
+    <Directory "/usr/local/apache/common/docroot/wikidata/w/extensions">
        <IfModule mod_php5.c>
            php_admin_flag engine off
         </IfModule>
@@ -271,12 +271,12 @@
 <VirtualHost *>
     ServerName donate.wikimedia.org
     ServerAlias donate.wikipedia.org
-    DocumentRoot "/usr/local/apache/common/docroot/donate"
+    DocumentRoot "/usr/local/apache/common/docroot/wikimedia.org"
     AllowEncodedSlashes On
     RewriteEngine On
 
     # Primary wiki redirector:
-    Alias /wiki /usr/local/apache/common/docroot/donate/w/index.php
+    Alias /wiki /usr/local/apache/common/docroot/wikimedia.org/w/index.php
 
     # Push to SSL
     RewriteCond %{HTTP:X-Forwarded-Proto} !https
@@ -292,12 +292,12 @@
     # Configurable favicon
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
 
-    <Directory "/usr/local/apache/common/docroot/donate/w">
+    <Directory "/usr/local/apache/common/docroot/wikimedia.org/w">
         <IfModule mod_php5.c>
             php_admin_flag engine on
         </IfModule>
     </Directory>
-    <Directory "/usr/local/apache/common/docroot/donate/w/extensions">
+    <Directory "/usr/local/apache/common/docroot/wikimedia.org/w/extensions">
         <IfModule mod_php5.c>
             php_admin_flag engine off
         </IfModule>
@@ -307,12 +307,12 @@
 <VirtualHost *>
     ServerName vote.wikimedia.org
 
-    DocumentRoot "/usr/local/apache/common/docroot/vote"
+    DocumentRoot "/usr/local/apache/common/docroot/wikimedia.org"
     AllowEncodedSlashes On
     RewriteEngine On
 
     # Primary wiki redirector:
-    Alias /wiki /usr/local/apache/common/docroot/vote/w/index.php
+    Alias /wiki /usr/local/apache/common/docroot/wikimedia.org/w/index.php
     RewriteRule ^/$ /w/index.php
     RewriteRule ^/w/$ /w/index.php
 
@@ -320,12 +320,12 @@
     RewriteCond %{HTTP:X-Forwarded-Proto} !https
     RewriteRule (.) https://vote.wikimedia.org%{REQUEST_URI} [R=301]
 
-    <Directory "/usr/local/apache/common/docroot/vote/w">
+    <Directory "/usr/local/apache/common/docroot/wikimedia.org/w">
         <IfModule mod_php5.c>
             php_admin_flag engine on
         </IfModule>
     </Directory>
-    <Directory "/usr/local/apache/common/docroot/vote/w/extensions">
+    <Directory "/usr/local/apache/common/docroot/wikimedia.org/w/extensions">
         <IfModule mod_php5.c>
             php_admin_flag engine off
         </IfModule>
