www.wikisource.org is not a portal, redirect to wikisource.org
Broken by https://gerrit.wikimedia.org/r/#/c/90635

Bug: 55926
Change-Id: Ie73ce62139d9abca0e9e961fab2e29907eb4133c

--- a/main.conf
+++ b/main.conf
@@ -496,6 +496,10 @@
 
     RewriteEngine On
 
+    # www -> wikisource.org - Not a portal!
+    RewriteCond %{HTTP_HOST} (www)\.wikisource\.org
+    RewriteRule ^(.*)$ http://wikisource.org$1 [R=301,L]
+
     # Make robots.txt editable via Mediawiki:robots.txt
     RewriteRule ^/robots.txt$ /w/robots.php [L]
 
