Correct path reference to bits path hit by ULS
Follows change Id362b24ab. I nested the cache-control configuration directives
in the existing <Directory> block, but it appears not to exist. Add a separate
<Directory> block for the actual file path hit by ULS font reuqests.

Change-Id: I1113b959490c3db279e9ea1414e8e599f2f99d32

--- a/wikimedia.conf
+++ b/wikimedia.conf
@@ -77,9 +77,12 @@
        <IfModule mod_php5.c>
            php_admin_flag engine off
         </IfModule>
+    </Directory>
+    # Cache fonts in static-current/extensions for as long as possible.
+    # Primarily here for UniversalLanguageSelector.
+    <Directory "/usr/local/apache/common/docroot/bits/static-current/extensions">
         <IfModule mod_headers.c>
             <FilesMatch "\.(eot|ttf|woff)$">
-                # Cache fonts for a year.
                 Header set Cache-control "max-age=31536000"
             </FilesMatch>
         </IfModule>
