Revert "Switch www portals to using one docroot."
This reverts commit babad3dde2f82d63ddd184bf1917900f22a43fa7.

Change-Id: I43bb7171b966823e01025c476c68e555d54f81c0

--- a/wwwportals.conf
+++ b/wwwportals.conf
@@ -4,7 +4,7 @@
 </VirtualHost>
 
 <VirtualHost *>
-    DocumentRoot /usr/local/apache/common/docroot/wwwportal
+    DocumentRoot "/usr/local/apache/common/docroot/www.wikipedia.org"
     ServerName www.wikipedia.org
 
     RewriteEngine On
@@ -23,6 +23,7 @@
     RewriteRule ^/(upload|wiki|stats|w)/(.*)$ http://en.wikipedia.org/$1/$2 [R=301,L]
     RewriteRule ^/wiki$ http://en.wikipedia.org/ [R=301,L]
 
+
     # Mailing lists...
     RewriteRule ^/(mailman|pipermail)(.*)$ http://mail.wikipedia.org/$1$2 [R=301,L]
 
@@ -35,6 +36,7 @@
     RewriteRule ^(.*)$ http://en.wikipedia.org$1 [R=301,L]
 
     php_admin_flag engine on
+
 </VirtualHost>
 
 <VirtualHost *>
@@ -45,7 +47,7 @@
 <VirtualHost *>
     ServerName www.wiktionary.org
 
-    DocumentRoot /usr/local/apache/common/docroot/wwwportal
+    DocumentRoot /usr/local/apache/common/docroot/www.wiktionary.org
     php_admin_flag engine on
 
     RewriteEngine On
@@ -68,7 +70,7 @@
 <VirtualHost *>
     ServerName www.wikinews.org
 
-    DocumentRoot /usr/local/apache/common/docroot/wwwportal
+    DocumentRoot /usr/local/apache/common/docroot/www.wikinews.org
     php_admin_flag engine on
 
     RewriteEngine On
@@ -91,7 +93,7 @@
 <VirtualHost *>
     ServerName www.wikiquote.org
 
-    DocumentRoot /usr/local/apache/common/docroot/wwwportal
+    DocumentRoot /usr/local/apache/common/docroot/www.wikiquote.org
     php_admin_flag engine on
 
     RewriteEngine On
@@ -110,7 +112,7 @@
     ServerName www.wikiversity.org
     ServerAlias wikiversity.org
 
-    DocumentRoot /usr/local/apache/common/docroot/wwwportal
+    DocumentRoot /usr/local/apache/common/docroot/www.wikiversity.org
     php_admin_flag engine on
 
     RewriteEngine On
@@ -125,6 +127,7 @@
     RewriteRule ^(.*)$ http://en.wikiversity.org$1 [R=301,L]
 </VirtualHost>
 
+
 <VirtualHost *>
     ServerName wikibooks.org
     Redirect permanent / http://www.wikibooks.org/
@@ -133,7 +136,7 @@
 <VirtualHost *>
     ServerName www.wikibooks.org
 
-    DocumentRoot /usr/local/apache/common/docroot/wwwportal
+    DocumentRoot /usr/local/apache/common/docroot/www.wikibooks.org
     php_admin_flag engine on
 
     RewriteEngine On
@@ -156,7 +159,7 @@
 <VirtualHost *>
     ServerName www.wikivoyage.org
 
-    DocumentRoot /usr/local/apache/common/docroot/wwwportal
+    DocumentRoot /usr/local/apache/common/docroot/www.wikivoyage.org
     php_admin_flag engine on
 
     RewriteEngine On
