Switch www portals to using one docroot
Change-Id: I730ec0bf8c388cada17b46497d87146f1e4ded1a

--- a/wikimedia.conf
+++ b/wikimedia.conf
@@ -212,10 +212,9 @@
 
 # wikimedia.org
 <VirtualHost *>
-#    DocumentRoot "/usr/local/apache/htdocs/wikimedia"
-    DocumentRoot "/usr/local/apache/common/docroot/www.wikimedia.org"
+    DocumentRoot "/usr/local/apache/common/docroot/wwwportal"
     ServerName www.wikimedia.org
-    ServerAlias *.wikimedia.org
+    ServerAlias *.wikimedia.org # FIXME: Should this still be here?
 
     # Main page portal
     RewriteRule ^/$ /w/extract2.php?title=Www.wikimedia.org_portal&template=Www.wikimedia.org_template [L]
@@ -232,7 +231,7 @@
     RewriteEngine On
     RewriteRule ^/wiki/(.*)$ http://wikimediafoundation.org/wiki/$1 [R=301,L]
 
-  <Directory "/usr/local/apache/common/docroot/www.wikimedia.org/w">
+  <Directory "/usr/local/apache/common/docroot/wwwportal/w">
    <IfModule mod_php5.c>
     php_admin_flag engine on
    </IfModule>
