--- a/wwwportals.conf
+++ b/wwwportals.conf
@@ -8,7 +8,7 @@
 </VirtualHost>
 
 <VirtualHost *>
-    DocumentRoot "/usr/local/apache/common/docroot/www.wikipedia.org"
+    DocumentRoot /usr/local/apache/common/docroot/wwwportal
     ServerName www.wikipedia.org
 
     RewriteEngine On
@@ -27,7 +27,6 @@
     RewriteRule ^/(upload|wiki|stats|w)/(.*)$ http://en.wikipedia.org/$1/$2 [R=301,L]
     RewriteRule ^/wiki$ http://en.wikipedia.org/ [R=301,L]
 
-
     # Mailing lists...
     RewriteRule ^/(mailman|pipermail)(.*)$ http://mail.wikipedia.org/$1$2 [R=301,L]
 
@@ -40,7 +39,6 @@
     RewriteRule ^(.*)$ http://en.wikipedia.org$1 [R=301,L]
 
     php_admin_flag engine on
-
 </VirtualHost>
 
 <VirtualHost *>
@@ -64,7 +62,7 @@
 <VirtualHost *>
     ServerName www.wiktionary.org
 
-    DocumentRoot /usr/local/apache/common/docroot/www.wiktionary.org
+    DocumentRoot /usr/local/apache/common/docroot/wwwportal
     php_admin_flag engine on
 
     RewriteEngine On
@@ -87,7 +85,7 @@
 <VirtualHost *>
     ServerName www.wikinews.org
 
-    DocumentRoot /usr/local/apache/common/docroot/www.wikinews.org
+    DocumentRoot /usr/local/apache/common/docroot/wwwportal
     php_admin_flag engine on
 
     RewriteEngine On
@@ -110,7 +108,7 @@
 <VirtualHost *>
     ServerName www.wikiquote.org
 
-    DocumentRoot /usr/local/apache/common/docroot/www.wikiquote.org
+    DocumentRoot /usr/local/apache/common/docroot/wwwportal
     php_admin_flag engine on
 
     RewriteEngine On
@@ -129,7 +127,7 @@
     ServerName www.wikiversity.org
     ServerAlias wikiversity.org
 
-    DocumentRoot /usr/local/apache/common/docroot/www.wikiversity.org
+    DocumentRoot /usr/local/apache/common/docroot/wwwportal
     php_admin_flag engine on
 
     RewriteEngine On
@@ -144,7 +142,6 @@
     RewriteRule ^(.*)$ http://en.wikiversity.org$1 [R=301,L]
 </VirtualHost>
 
-
 <VirtualHost *>
     ServerName wikibooks.org
     Redirect permanent / http://www.wikibooks.org/
@@ -153,7 +150,7 @@
 <VirtualHost *>
     ServerName www.wikibooks.org
 
-    DocumentRoot /usr/local/apache/common/docroot/www.wikibooks.org
+    DocumentRoot /usr/local/apache/common/docroot/wwwportal
     php_admin_flag engine on
 
     RewriteEngine On
@@ -176,7 +173,7 @@
 <VirtualHost *>
     ServerName www.wikivoyage.org
 
-    DocumentRoot /usr/local/apache/common/docroot/www.wikivoyage.org
+    DocumentRoot /usr/local/apache/common/docroot/wwwportal
     php_admin_flag engine on
 
     RewriteEngine On
