<VirtualHost> for m.wikipedia.org
!!!! DO NOT MERGE until https://gerrit.wikimedia.org/r/#/c/97107/

All requests to m.wikipedia.org will be sent to the mobilelanding.php
which will determine based on X-CS and other headers the most
appropriate starting page for this user, and redirect to it.

Change-Id: Id9daf97af40df376891da814c7d8a46a9dd2dc5b

--- a/wwwportals.conf
+++ b/wwwportals.conf
@@ -40,6 +40,17 @@
 </VirtualHost>
 
 <VirtualHost *>
+    ServerName m.wikipedia.org
+    DocumentRoot /usr/local/apache/common/docroot/m.wikipedia.org
+    php_admin_flag engine on
+    RewriteEngine On
+
+    # Everything will be redirected to the appropriate lang.m.wikipedia.org or lang.zero.wikipedia.org based on zero settings
+    RewriteRule ^(.*)$ /w/mobilelanding.php [L]
+</VirtualHost>
+
+
+<VirtualHost *>
     ServerName wiktionary.org
     Redirect permanent / http://www.wiktionary.org/
 </VirtualHost>
