wikipedia.com.il -> wikipedia.co.il
Since the latter actually exists and points to our servers. There's no
such thing as *.com.il.

Change-Id: I17955eb7948051091983a93569ac09703353dee3

--- a/redirects.conf
+++ b/redirects.conf
@@ -33,8 +33,8 @@
 	*.wicipediacymraeg.org \
 	wikipedia.org.il \
 	*.wikipedia.org.il \
-	wikipedia.com.il \
-	*.wikipedia.com.il \
+	wikipedia.co.il \
+	*.wikipedia.co.il \
 	vikimedija.org \
 	*.vikimedija.org \
 	wikipedia.bg \
@@ -965,11 +965,11 @@
 	# rewrite	*wikipedia.org.il	//he.wikipedia.org
 	RewriteCond %{HTTP_HOST} ^(.+)\.wikipedia\.org\.il$
 	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://he.wikipedia.org$0 [R=301,L,NE]
-	# rewrite	*wikipedia.com.il	//he.wikipedia.org
-	RewriteCond %{HTTP_HOST} =wikipedia.com.il
+	# rewrite	*wikipedia.co.il	//he.wikipedia.org
+	RewriteCond %{HTTP_HOST} =wikipedia.co.il
 	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://he.wikipedia.org$0 [R=301,L,NE]
-	# rewrite	*wikipedia.com.il	//he.wikipedia.org
-	RewriteCond %{HTTP_HOST} ^(.+)\.wikipedia\.com\.il$
+	# rewrite	*wikipedia.co.il	//he.wikipedia.org
+	RewriteCond %{HTTP_HOST} ^(.+)\.wikipedia\.co\.il$
 	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://he.wikipedia.org$0 [R=301,L,NE]
 	# rewrite	*vikimedija.org	//rs.wikimedia.org
 	RewriteCond %{HTTP_HOST} =vikimedija.org
