--- a/redirects.conf
+++ b/redirects.conf
@@ -214,6 +214,8 @@
 	*.careers.wikipedia.org \
 	jobs.wikipedia.org \
 	*.jobs.wikipedia.org \
+	*.mobile.wikipedia.org \
+	*.wap.wikipedia.org \
 	shop.wiktionary.org \
 	store.wiktionary.org \
 	shop.wikiquote.org \
@@ -344,6 +346,7 @@
 	wikimania.wikimedia.org \
 	labs.wikimedia.org \
 	coffee.wikimedia.org \
+	mobile.wikipedia.org \
 
 	# allow caching for redirects
 	<IfModule mod_headers.c>
@@ -862,6 +865,9 @@
 	# funnel	coffee.wikimedia.org	//en.wikipedia.org/wiki/Hyper_Text_Coffee_Pot_Control_Protocol
 	RewriteCond %{HTTP_HOST} =coffee.wikimedia.org
 	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://en.wikipedia.org/wiki/Hyper_Text_Coffee_Pot_Control_Protocol [R=301,L,NE]
+	# funnel	mobile.wikipedia.org	//m.wikipedia.org
+	RewriteCond %{HTTP_HOST} =mobile.wikipedia.org
+	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://m.wikipedia.org/ [R=301,L,NE]
 
 	# Type: wildcard
 	# funnel	*wikijunior.com	http://en.wikibooks.org/wiki/Wikijunior
@@ -1494,5 +1500,11 @@
 	# rewrite	*jobs.wikipedia.org	//wikimediafoundation.org/wiki/Job_openings
 	RewriteCond %{HTTP_HOST} ^(.+)\.jobs\.wikipedia\.org$
 	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://wikimediafoundation.org/wiki/Job_openings$0 [R=301,L,NE]
+	# rewrite	*.mobile.wikipedia.org	//*.m.wikipedia.org
+	RewriteCond %{HTTP_HOST} ^(.+)\.mobile\.wikipedia\.org$
+	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://%1.m.wikipedia.org$0 [R=301,L,NE]
+	# rewrite	*.wap.wikipedia.org	//*.m.wikipedia.org
+	RewriteCond %{HTTP_HOST} ^(.+)\.wap\.wikipedia\.org$
+	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://%1.m.wikipedia.org$0 [R=301,L,NE]
 </VirtualHost>
 # vim: sts=4 sw=4 autoindent syn=apache
