--- a/wwwportals.conf
+++ b/wwwportals.conf
@@ -40,6 +40,19 @@
 </VirtualHost>
 
 <VirtualHost *>
+    ServerName m.wikipedia.org
+    ServerAlias zero.wikipedia.org
+    UseCanonicalName off
+
+    DocumentRoot /usr/local/apache/common/docroot/m.wikipedia.org
+    php_admin_flag engine on
+    RewriteEngine On
+
+    # Everything will be redirected to the appropriate lang.m.wikipedia.org or lang.zero.wikipedia.org based on zero configuration @ meta
+    RewriteRule ^(.*)$ /w/mobilelanding.php [L]
+</VirtualHost>
+
+<VirtualHost *>
     ServerName wiktionary.org
     Redirect permanent / http://www.wiktionary.org/
 </VirtualHost>
