Make m/zero landing page redirect less aggressive
The current mobilelanding script just redirects everything
unconditionally, not taking the query path into account. Redirecting all
kinds of URLs, including e.g. robots or favicon to the main page sounds
just wrong and there's really no reason for this.

Change the redirect to ^/$ and let the rest be handled by 404s.

Change-Id: I0f1e87acdabcaf6f667f477587f4c85e05c25aa1

--- a/wwwportals.conf
+++ b/wwwportals.conf
@@ -51,7 +51,7 @@
     RewriteEngine On
 
     # Everything will be redirected to the appropriate lang.m.wikipedia.org or lang.zero.wikipedia.org based on zero configuration @ meta
-    RewriteRule ^(.*)$ /w/mobilelanding.php [L]
+    RewriteRule ^/$ /w/mobilelanding.php [L]
 </VirtualHost>
 
 <VirtualHost *>
