--- a/loginwiki.conf
+++ b/loginwiki.conf
@@ -6,8 +6,8 @@
     AllowEncodedSlashes On
 
     RewriteEngine On
-    RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteRule ^/(.*)$ https://login.wikimedia.beta.wmflabs.org/$1 [R=301,L]
+    #RewriteCond %{HTTP:X-Forwarded-Proto} !https
+    #RewriteRule ^/(.*)$ https://login.wikimedia.beta.wmflabs.org/$1 [R=301,L]
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/login/w/index.php
