conf for www.wikipedia.beta.wmflabs.org

--- a/site.conf
+++ b/site.conf
@@ -1,4 +1,5 @@
 # Sounds like a labs only conf?
+Include /usr/local/apache/conf/www.wikipedia.conf
 Include /usr/local/apache/conf/wikidata.conf
 Include /usr/local/apache/conf/wikisource.conf
 Include /usr/local/apache/conf/wikispecies.conf
