--- a/wmflabs.conf
+++ b/wmflabs.conf
@@ -160,8 +160,8 @@
 <VirtualHost *>
 #    DocumentRoot "/usr/local/apache/htdocs/wikimedia"
     DocumentRoot "/usr/local/apache/common/docroot/www.wikimedia.org"
-    ServerName www.wikimedia.org
-    ServerAlias *.wikimedia.org
+    ServerName www.wikimedia.beta.wmflabs.org
+    #ServerAlias *.wikimedia.org
 
     # Main page portal
     RewriteRule ^/$ /w/extract2.php?title=Www.wikimedia.org_portal&template=Www.wikimedia.org_template [L]
