--- a/redirects.conf
+++ b/redirects.conf
@@ -341,6 +341,7 @@
 	ve.wikimedia.org \
 	cz.wikimedia.org \
 	cs.wikimedia.org \
+	kr.wikimedia.org \
 	pk.wikimedia.org \
 	pt.wikimedia.org \
 	wikimania.wikimedia.org \
@@ -850,6 +851,9 @@
 	# funnel	cs.wikimedia.org	//www.wikimedia.cz
 	RewriteCond %{HTTP_HOST} =cs.wikimedia.org
 	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://www.wikimedia.cz/ [R=301,L,NE]
+	# funnel  kr.wikimedia.org    //meta.wikimedia.org/wiki/위키미디어_대한민국
+	RewriteCond %{HTTP_HOST} =kr.wikimedia.org
+	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://meta.wikimedia.org/wiki/%EC%9C%84%ED%82%A4%EB%AF%B8%EB%94%94%EC%96%B4_%EB%8C%80%ED%95%9C%EB%AF%BC%EA%B5%AD [R=301,L,NE]
 	# funnel	pk.wikimedia.org	//meta.wikimedia.org/wiki/Wikimedia_Community_User_Group_Pakistan
 	RewriteCond %{HTTP_HOST} =pk.wikimedia.org
 	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://meta.wikimedia.org/wiki/Wikimedia_Community_User_Group_Pakistan [R=301,L,NE]
