Redirect kr.wikimedia
Redirect kr.wikimedia.org to Chapter page on metawiki.

Bug: 54883
Change-Id: Id8b00e74065855bba195a3635a27e307267452cf

--- a/redirects.conf
+++ b/redirects.conf
@@ -347,6 +347,7 @@
 	labs.wikimedia.org \
 	coffee.wikimedia.org \
 	mobile.wikipedia.org \
+	kr.wikimedia.org \
 
 	# allow caching for redirects
 	<IfModule mod_headers.c>
@@ -868,6 +869,9 @@
 	# funnel	mobile.wikipedia.org	//m.wikipedia.org
 	RewriteCond %{HTTP_HOST} =mobile.wikipedia.org
 	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://m.wikipedia.org/ [R=301,L,NE]
+	# funnel  kr.wikimedia.org    //meta.wikimedia.org/wiki/위키미디어_대한민국
+	RewriteCond %{HTTP_HOST} =kr.wikimedia.org
+	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://meta.wikimedia.org/wiki/%EC%9C%84%ED%82%A4%EB%AF%B8%EB%94%94%EC%96%B4_%EB%8C%80%ED%95%9C%EB%AF%BC%EA%B5%AD [R=301,L,NE]
 
 	# Type: wildcard
 	# funnel	*wikijunior.com	http://en.wikibooks.org/wiki/Wikijunior
