Redirect m.wikidata to www.wikidata.org
This change redirects the Wikidata mobile (m.) sub domain to the
main domain to avoid time outs.

Bug: 49261
Change-Id: Idaf82983b3da3fae6999841255e9e9370835d60b

--- a/redirects.conf
+++ b/redirects.conf
@@ -347,6 +347,7 @@
 	labs.wikimedia.org \
 	coffee.wikimedia.org \
 	mobile.wikipedia.org \
+	m.wikidata.org \
 
 	# allow caching for redirects
 	<IfModule mod_headers.c>
@@ -868,6 +869,9 @@
 	# funnel	mobile.wikipedia.org	//m.wikipedia.org
 	RewriteCond %{HTTP_HOST} =mobile.wikipedia.org
 	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://m.wikipedia.org/ [R=301,L,NE]
+	# funnel	m.wikidata.org	//www.wikidata.org
+	RewriteCond %{HTTP_HOST} =m.wikidata.org
+	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://www.wikidata.org/ [R=301,L,NE]
 
 	# Type: wildcard
 	# funnel	*wikijunior.com	http://en.wikibooks.org/wiki/Wikijunior
