2 new education redirects
also moved educacao.wikimedia.org to the education section

Change-Id: Id44bda1fc5f7a19629afe8717b2d56076500ded1
RT: 6532

--- a/redirects.conf
+++ b/redirects.conf
@@ -247,7 +247,6 @@
 	donate.wikiversity.org \
 	donate.wiktionary.org \
 	sep11.wikipedia.org \
-	educacao.wikimedia.org \
 	be-x-old.wikisource.org \
 	de-beta.wikipedia.org \
 	cz.wikipedia.org \
@@ -289,6 +288,7 @@
 	wikibook.com \
 	wikibook.org \
 	textbook.wikipedia.org \
+	educacao.wikimedia.org \
 	education.wikimedia.org \
 	www.wikiipedia.org \
 	wikipedia.com \
@@ -378,6 +378,12 @@
 	# override	wikibooks.com/	http://en.wikibooks.org/wiki/Wikibooks_portal
 	RewriteCond %{HTTP_HOST} =wikibooks.com
 	RewriteRule ^/$ http://en.wikibooks.org/wiki/Wikibooks_portal [R=301,L,NE]
+	# override	education.wikimedia.org/evaluating	//commons.wikimedia.org/wiki/File:Evaluating_Wikipedia_brochure.pdf
+	RewriteCond %{HTTP_HOST} =education.wikimedia.org
+	RewriteRule ^/evaluating$ %{ENV:HTTP_X_Forwarded_Proto}://commons.wikimedia.org/wiki/File:Evaluating_Wikipedia_brochure.pdf [R=301,L,NE]
+	# override	education.wikimedia.org/illustrating	//commons.wikimedia.org/wiki/File:Illustrating_Wikipedia_brochure.pdf
+	RewriteCond %{HTTP_HOST} =education.wikimedia.org
+	RewriteRule ^/illustrating$ %{ENV:HTTP_X_Forwarded_Proto}://commons.wikimedia.org/wiki/File:Illustrating_Wikipedia_brochure.pdf [R=301,L,NE]
 	# override	education.wikimedia.org/casestudies	//outreach.wikimedia.org/wiki/Education/Case_Studies
 	RewriteCond %{HTTP_HOST} =education.wikimedia.org
 	RewriteRule ^/casestudies$ %{ENV:HTTP_X_Forwarded_Proto}://outreach.wikimedia.org/wiki/Education/Case_Studies [R=301,L,NE]
@@ -565,9 +571,6 @@
 	# funnel	sep11.wikipedia.org	http://wayback.archive.org/web/20030315000000*/http://sep11.wikipedia.org/wiki/In_Memoriam
 	RewriteCond %{HTTP_HOST} =sep11.wikipedia.org
 	RewriteRule . http://wayback.archive.org/web/20030315000000*/http://sep11.wikipedia.org/wiki/In_Memoriam [R=301,L,NE]
-	# funnel	educacao.wikimedia.org	//pt.wikipedia.org/wiki/Wikip%C3%A9dia:WU
-	RewriteCond %{HTTP_HOST} =educacao.wikimedia.org
-	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://pt.wikipedia.org/wiki/Wikip%C3%A9dia:WU [R=301,L,NE]
 	# rewrite	be-x-old.wikisource.org	//be.wikisource.org # Bug 41755
 	RewriteCond %{HTTP_HOST} =be-x-old.wikisource.org
 	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://be.wikisource.org$0 [R=301,L,NE]
@@ -691,6 +694,9 @@
 	# rewrite	textbook.wikipedia.org	//www.wikibooks.org
 	RewriteCond %{HTTP_HOST} =textbook.wikipedia.org
 	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://www.wikibooks.org$0 [R=301,L,NE]
+	# funnel	educacao.wikimedia.org	//pt.wikipedia.org/wiki/Wikip%C3%A9dia:WU
+	RewriteCond %{HTTP_HOST} =educacao.wikimedia.org
+	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://pt.wikipedia.org/wiki/Wikip%C3%A9dia:WU [R=301,L,NE]
 	# funnel	education.wikimedia.org	//outreach.wikimedia.org/wiki/Wikipedia_Education_Program
 	RewriteCond %{HTTP_HOST} =education.wikimedia.org
 	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://outreach.wikimedia.org/wiki/Wikipedia_Education_Program [R=301,L,NE]
