clean up chapters redirects
* consolidate from other conf into redirects.dat
  (WMCH, also now is protorel instead of forcing HTTP)
* kill redirects for hostnames where DNS doesn't point to
  the cluster (cz, cs)
* force HTTP (was protorel) for targets that don't support
  HTTPS or use a cert with a name mismatch (hu, it, ve)
* alphabetize (moved only ve)

Change-Id: Icd6cf866496a5efbcfffc7a9f56f5ed454a9ec49

--- a/redirects.conf
+++ b/redirects.conf
@@ -336,14 +336,13 @@
 	mediawiki.org \
 	wiki.mediawiki.org \
 	nostalgia.wikimedia.org \
+	ch.wikimedia.org \
 	hu.wikimedia.org \
 	it.wikimedia.org \
-	ve.wikimedia.org \
-	cz.wikimedia.org \
-	cs.wikimedia.org \
 	kr.wikimedia.org \
 	pk.wikimedia.org \
 	pt.wikimedia.org \
+	ve.wikimedia.org \
 	wikimania.wikimedia.org \
 	labs.wikimedia.org \
 	coffee.wikimedia.org \
@@ -842,22 +841,16 @@
 	# rewrite	nostalgia.wikimedia.org	//nostalgia.wikipedia.org
 	RewriteCond %{HTTP_HOST} =nostalgia.wikimedia.org
 	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://nostalgia.wikipedia.org$0 [R=301,L,NE]
-	# rewrite	hu.wikimedia.org	//wiki.media.hu
+	# funnel	ch.wikimedia.org	//www.wikimedia.ch
+	RewriteCond %{HTTP_HOST} =ch.wikimedia.org
+	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://www.wikimedia.ch/ [R=301,L,NE]
+	# rewrite	hu.wikimedia.org	http://wiki.media.hu
 	RewriteCond %{HTTP_HOST} =hu.wikimedia.org
-	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://wiki.media.hu$0 [R=301,L,NE]
-	# rewrite	it.wikimedia.org	//www.wikimedia.it
+	RewriteRule .* http://wiki.media.hu$0 [R=301,L,NE]
+	# rewrite	it.wikimedia.org	http://www.wikimedia.it
 	RewriteCond %{HTTP_HOST} =it.wikimedia.org
-	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://www.wikimedia.it$0 [R=301,L,NE]
-	# rewrite	ve.wikimedia.org	//wikimedia.org.ve
-	RewriteCond %{HTTP_HOST} =ve.wikimedia.org
-	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://wikimedia.org.ve$0 [R=301,L,NE]
-	# funnel	cz.wikimedia.org	//www.wikimedia.cz
-	RewriteCond %{HTTP_HOST} =cz.wikimedia.org
-	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://www.wikimedia.cz/ [R=301,L,NE]
-	# funnel	cs.wikimedia.org	//www.wikimedia.cz
-	RewriteCond %{HTTP_HOST} =cs.wikimedia.org
-	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://www.wikimedia.cz/ [R=301,L,NE]
-	# funnel  kr.wikimedia.org    //meta.wikimedia.org/wiki/위키미디어_대한민국
+	RewriteRule .* http://www.wikimedia.it$0 [R=301,L,NE]
+	# funnel	kr.wikimedia.org	//meta.wikimedia.org/wiki/위키미디어_대한민국
 	RewriteCond %{HTTP_HOST} =kr.wikimedia.org
 	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://meta.wikimedia.org/wiki/\%EC\%9C\%84\%ED\%82\%A4\%EB\%AF\%B8\%EB\%94\%94\%EC\%96\%B4_\%EB\%8C\%80\%ED\%95\%9C\%EB\%AF\%BC\%EA\%B5\%AD [R=301,L,NE]
 	# funnel	pk.wikimedia.org	//meta.wikimedia.org/wiki/Wikimedia_Community_User_Group_Pakistan
@@ -866,6 +859,9 @@
 	# funnel	pt.wikimedia.org	http://wikimedia.pt/
 	RewriteCond %{HTTP_HOST} =pt.wikimedia.org
 	RewriteRule . http://wikimedia.pt/ [R=301,L,NE]
+	# rewrite	ve.wikimedia.org	http://wikimedia.org.ve
+	RewriteCond %{HTTP_HOST} =ve.wikimedia.org
+	RewriteRule .* http://wikimedia.org.ve$0 [R=301,L,NE]
 	# rewrite	wikimania.wikimedia.org	//wikimania2014.wikimedia.org
 	RewriteCond %{HTTP_HOST} =wikimania.wikimedia.org
 	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://wikimania2014.wikimedia.org$0 [R=301,L,NE]
