move {jobs,careers}.wikimedia.org to redirects.dat
Change-Id: I3ba3f3cd87aa388670e4b7594692e36a0365b255

--- a/redirects.conf
+++ b/redirects.conf
@@ -210,8 +210,12 @@
 	*.wikipediastories.net \
 	wikipediastories.org \
 	*.wikipediastories.org \
+	careers.wikimedia.org \
+	*.careers.wikimedia.org \
 	careers.wikipedia.org \
 	*.careers.wikipedia.org \
+	jobs.wikimedia.org \
+	*.jobs.wikimedia.org \
 	jobs.wikipedia.org \
 	*.jobs.wikipedia.org \
 	*.mobile.wikipedia.org \
@@ -464,11 +468,23 @@
 	# override	*wikipedie.cz/experti-na-prirodu	//cs.wikipedia.org/wiki/Wikipedie:WikiProjekt_Chráněná_území/Experti_na_přírodu
 	RewriteCond %{HTTP_HOST} ^(.+)\.wikipedie\.cz$
 	RewriteRule ^/experti\-na\-prirodu$ %{ENV:HTTP_X_Forwarded_Proto}://cs.wikipedia.org/wiki/Wikipedie:WikiProjekt_Chr\%C3\%A1n\%C4\%9Bn\%C3\%A1_\%C3\%BAzem\%C3\%AD/Experti_na_p\%C5\%99\%C3\%ADrodu [R=301,L,NE]
+	# override	*careers.wikimedia.org/	//wikimediafoundation.org/wiki/Work_with_us
+	RewriteCond %{HTTP_HOST} =careers.wikimedia.org
+	RewriteRule ^/$ %{ENV:HTTP_X_Forwarded_Proto}://wikimediafoundation.org/wiki/Work_with_us [R=301,L,NE]
+	# override	*careers.wikimedia.org/	//wikimediafoundation.org/wiki/Work_with_us
+	RewriteCond %{HTTP_HOST} ^(.+)\.careers\.wikimedia\.org$
+	RewriteRule ^/$ %{ENV:HTTP_X_Forwarded_Proto}://wikimediafoundation.org/wiki/Work_with_us [R=301,L,NE]
 	# override	*careers.wikipedia.org/	//wikimediafoundation.org/wiki/Work_with_us
 	RewriteCond %{HTTP_HOST} =careers.wikipedia.org
 	RewriteRule ^/$ %{ENV:HTTP_X_Forwarded_Proto}://wikimediafoundation.org/wiki/Work_with_us [R=301,L,NE]
 	# override	*careers.wikipedia.org/	//wikimediafoundation.org/wiki/Work_with_us
 	RewriteCond %{HTTP_HOST} ^(.+)\.careers\.wikipedia\.org$
+	RewriteRule ^/$ %{ENV:HTTP_X_Forwarded_Proto}://wikimediafoundation.org/wiki/Work_with_us [R=301,L,NE]
+	# override	*jobs.wikimedia.org/	//wikimediafoundation.org/wiki/Work_with_us
+	RewriteCond %{HTTP_HOST} =jobs.wikimedia.org
+	RewriteRule ^/$ %{ENV:HTTP_X_Forwarded_Proto}://wikimediafoundation.org/wiki/Work_with_us [R=301,L,NE]
+	# override	*jobs.wikimedia.org/	//wikimediafoundation.org/wiki/Work_with_us
+	RewriteCond %{HTTP_HOST} ^(.+)\.jobs\.wikimedia\.org$
 	RewriteRule ^/$ %{ENV:HTTP_X_Forwarded_Proto}://wikimediafoundation.org/wiki/Work_with_us [R=301,L,NE]
 	# override	*jobs.wikipedia.org/	//wikimediafoundation.org/wiki/Work_with_us
 	RewriteCond %{HTTP_HOST} =jobs.wikipedia.org
@@ -1494,11 +1510,23 @@
 	# funnel	*wikipediastories.org	//wikimediafoundation.org/wiki/Thank_You_All
 	RewriteCond %{HTTP_HOST} ^(.+)\.wikipediastories\.org$
 	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://wikimediafoundation.org/wiki/Thank_You_All [R=301,L,NE]
+	# rewrite	*careers.wikimedia.org	//wikimediafoundation.org/wiki/Job_openings
+	RewriteCond %{HTTP_HOST} =careers.wikimedia.org
+	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://wikimediafoundation.org/wiki/Job_openings$0 [R=301,L,NE]
+	# rewrite	*careers.wikimedia.org	//wikimediafoundation.org/wiki/Job_openings
+	RewriteCond %{HTTP_HOST} ^(.+)\.careers\.wikimedia\.org$
+	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://wikimediafoundation.org/wiki/Job_openings$0 [R=301,L,NE]
 	# rewrite	*careers.wikipedia.org	//wikimediafoundation.org/wiki/Job_openings
 	RewriteCond %{HTTP_HOST} =careers.wikipedia.org
 	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://wikimediafoundation.org/wiki/Job_openings$0 [R=301,L,NE]
 	# rewrite	*careers.wikipedia.org	//wikimediafoundation.org/wiki/Job_openings
 	RewriteCond %{HTTP_HOST} ^(.+)\.careers\.wikipedia\.org$
+	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://wikimediafoundation.org/wiki/Job_openings$0 [R=301,L,NE]
+	# rewrite	*jobs.wikimedia.org	//wikimediafoundation.org/wiki/Job_openings
+	RewriteCond %{HTTP_HOST} =jobs.wikimedia.org
+	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://wikimediafoundation.org/wiki/Job_openings$0 [R=301,L,NE]
+	# rewrite	*jobs.wikimedia.org	//wikimediafoundation.org/wiki/Job_openings
+	RewriteCond %{HTTP_HOST} ^(.+)\.jobs\.wikimedia\.org$
 	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://wikimediafoundation.org/wiki/Job_openings$0 [R=301,L,NE]
 	# rewrite	*jobs.wikipedia.org	//wikimediafoundation.org/wiki/Job_openings
 	RewriteCond %{HTTP_HOST} =jobs.wikipedia.org
