final (I hope!) fix for protorel redirects
* consolidate some project domains into redirects.dat from other conf
  and removed some redirect hops (where refreshDomainRedirects
  complained)
  * mediawiki.org
  * wikimedia.org
  * wikinews.org
  * wikiquote.org
  * wikiversity.org
  * wikivoyage.org
  * wikibooks.org
  * wiktionary.org
  * wikidata.org
  * www.wikisource.org

* cleaned up wikibooks/wikijunior in redirects.dat (and made protorel)
* force HTTPS for redirects on wikis that already force HTTPS
* rm backward compatibility redirects (e.g. UseMod) for newer wikis
  and private wikis
* redirect to lists.wikimedia.org instead of mail.wikipedia.org!!

RT: 1668
Bug: 31369
Change-Id: I27300f33a644f09379bc58613da4f702dfca684e

--- a/wikimedia.conf
+++ b/wikimedia.conf
@@ -8,13 +8,16 @@
     AllowEncodedSlashes On
 
     RewriteEngine On
+    RewriteRule . - [E=HTTP_X_Forwarded_Proto:%{HTTP:X-Forwarded-Proto}]
+    RewriteCond %{ENV:HTTP_X_Forwarded_Proto} !=https
+    RewriteRule . - [E=HTTP_X_Forwarded_Proto:http]
     RewriteMap lowercase int:tolower
 
     # Uploads to the host-specific directory
     # First grab the subdomain from HTTP_HOST
     RewriteCond %{HTTP_HOST} ([a-z\-]+)\.wikimedia\.org
     # Now use it
-    RewriteRule ^/upload/(.*)$ http://upload.wikimedia.org/wikimedia.org/%1/$1 [R=302]
+    RewriteRule ^/upload/(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/wikimedia.org/%1/$1 [R=302]
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/wikimedia.org/w/index.php
@@ -22,14 +25,14 @@
 
     # www. prefix
     RewriteCond %{HTTP_HOST} ^www.([a-z]+).wikimedia.org$
-    RewriteRule ^(.*)$ http://%1.wikimedia.org$1 [R=301,L]
+    RewriteRule ^(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://%1.wikimedia.org$1 [R=301,L]
 
     # UseMod compatibility URLs
     RewriteCond %{QUERY_STRING} ([^&;]+)
-    RewriteRule ^/wiki\.cgi$ /w/index.php?title=%1 [R=301,L]
-    RewriteRule ^/wiki\.cgi$ /w/index.php [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php?title=%1 [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php [R=301,L]
 
-    RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
+    RewriteRule ^/math/(.*) %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/math/$1 [R=301]
 
     # Configurable favicon
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
@@ -46,12 +49,13 @@
     </Directory>
 
     # Stats
-    RewriteRule ^/stats(/(.*$)|$) http://wikimedia.org/stats/%{HTTP_HOST}/$1 [R=301,L]
+    RewriteRule ^/stats(/(.*$)|$) %{ENV:HTTP_X_Forwarded_Proto}://www.wikimedia.org/stats/%{SERVER_NAME}/$1 [R=301,L]
     # Load robots.txt from the wiki
     RewriteRule ^/robots.txt$ /w/robots.php [L]
 
 </VirtualHost>
 
+#bits
 <VirtualHost *>
     DocumentRoot "/usr/local/apache/common/docroot/bits/"
     ServerName bits.wikimedia.org
@@ -129,12 +133,7 @@
     Alias /wiki /usr/local/apache/common/docroot/transitionteam/w/index.php
     RewriteRule ^/$ /w/index.php
 
-    # UseMod compatibility URLs
-    RewriteCond %{QUERY_STRING} ([^&;]+)
-    RewriteRule ^/wiki\.cgi$ /w/index.php?title=%1 [R=301,L]
-    RewriteRule ^/wiki\.cgi$ /w/index.php [R=301,L]
-
-    RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
+    RewriteRule ^/math/(.*) https://upload.wikimedia.org/math/$1 [R=301]
 
     # Configurable favicon
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
@@ -166,12 +165,7 @@
     Alias /wiki /usr/local/apache/common/docroot/iegcom/w/index.php
     RewriteRule ^/$ /w/index.php
 
-    # UseMod compatibility URLs
-    RewriteCond %{QUERY_STRING} ([^&;]+)
-    RewriteRule ^/wiki\.cgi$ /w/index.php?title=%1 [R=301,L]
-    RewriteRule ^/wiki\.cgi$ /w/index.php [R=301,L]
-
-    RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
+    RewriteRule ^/math/(.*) https://upload.wikimedia.org/math/$1 [R=301]
 
     # Configurable favicon
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
@@ -252,18 +246,17 @@
     </Directory>
 </VirtualHost>
 
-<VirtualHost *>
-    ServerName wikimedia.org
-    Redirect permanent / http://www.wikimedia.org/
-</VirtualHost>
-
 # wikimedia.org
 <VirtualHost *>
     DocumentRoot "/usr/local/apache/common/docroot/wwwportal"
+    # bare wikimedia.org is in redirects.dat
     ServerName www.wikimedia.org
     ServerAlias *.wikimedia.org # FIXME: Should this still be here?
 
     RewriteEngine On
+    RewriteRule . - [E=HTTP_X_Forwarded_Proto:%{HTTP:X-Forwarded-Proto}]
+    RewriteCond %{ENV:HTTP_X_Forwarded_Proto} !=https
+    RewriteRule . - [E=HTTP_X_Forwarded_Proto:http]
 
     # Main page portal
     RewriteRule ^/$ /w/extract2.php?title=Www.wikimedia.org_portal&template=Www.wikimedia.org_template [L]
@@ -277,7 +270,7 @@
     ExpiresActive On
 
     # Redirect wiki which was previously at this location
-    RewriteRule ^/wiki/(.*)$ http://wikimediafoundation.org/wiki/$1 [R=301,L]
+    RewriteRule ^/wiki/(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://wikimediafoundation.org/wiki/$1 [R=301,L]
 
   <Directory "/usr/local/apache/common/docroot/wwwportal/w">
    <IfModule mod_php5.c>
