consolidate wikimedia.org; rm some redirect hops
Change-Id: I27300f33a644f09379bc58613da4f702dfca684e

--- a/redirects.conf
+++ b/redirects.conf
@@ -349,6 +349,7 @@
 	ve.wikimedia.org \
 	wikimania.wikimedia.org \
 	labs.wikimedia.org \
+	wikimedia.org \
 	coffee.wikimedia.org \
 	mobile.wikipedia.org \
 
@@ -884,6 +885,9 @@
 	# funnel	labs.wikimedia.org	https://wikitech.wikimedia.org/
 	RewriteCond %{HTTP_HOST} =labs.wikimedia.org
 	RewriteRule . https://wikitech.wikimedia.org/ [R=301,L,NE]
+	# funnel	wikimedia.org	//www.wikimedia.org
+	RewriteCond %{HTTP_HOST} =wikimedia.org
+	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://www.wikimedia.org/ [R=301,L,NE]
 	# funnel	coffee.wikimedia.org	//en.wikipedia.org/wiki/Hyper_Text_Coffee_Pot_Control_Protocol
 	RewriteCond %{HTTP_HOST} =coffee.wikimedia.org
 	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://en.wikipedia.org/wiki/Hyper_Text_Coffee_Pot_Control_Protocol [R=301,L,NE]
@@ -1105,18 +1109,18 @@
 	# rewrite	*wikipedia.ee	//et.wikipedia.org
 	RewriteCond %{HTTP_HOST} ^(.+)\.wikipedia\.ee$
 	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://et.wikipedia.org$0 [R=301,L,NE]
-	# rewrite	*wikimedia.biz	//wikimedia.org
+	# rewrite	*wikimedia.biz	//www.wikimedia.org
 	RewriteCond %{HTTP_HOST} =wikimedia.biz
-	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://wikimedia.org$0 [R=301,L,NE]
-	# rewrite	*wikimedia.biz	//wikimedia.org
+	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://www.wikimedia.org$0 [R=301,L,NE]
+	# rewrite	*wikimedia.biz	//www.wikimedia.org
 	RewriteCond %{HTTP_HOST} ^(.+)\.wikimedia\.biz$
-	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://wikimedia.org$0 [R=301,L,NE]
-	# rewrite	*wikimedia.jp.net	//wikimedia.org
+	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://www.wikimedia.org$0 [R=301,L,NE]
+	# rewrite	*wikimedia.jp.net	//www.wikimedia.org
 	RewriteCond %{HTTP_HOST} =wikimedia.jp.net
-	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://wikimedia.org$0 [R=301,L,NE]
-	# rewrite	*wikimedia.jp.net	//wikimedia.org
+	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://www.wikimedia.org$0 [R=301,L,NE]
+	# rewrite	*wikimedia.jp.net	//www.wikimedia.org
 	RewriteCond %{HTTP_HOST} ^(.+)\.wikimedia\.jp\.net$
-	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://wikimedia.org$0 [R=301,L,NE]
+	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://www.wikimedia.org$0 [R=301,L,NE]
 	# rewrite	*wikimedia.lt	//wikimediafoundation.org
 	RewriteCond %{HTTP_HOST} =wikimedia.lt
 	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://wikimediafoundation.org$0 [R=301,L,NE]
@@ -1129,12 +1133,12 @@
 	# rewrite	*wikipedia.lt	//lt.wikipedia.org
 	RewriteCond %{HTTP_HOST} ^(.+)\.wikipedia\.lt$
 	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://lt.wikipedia.org$0 [R=301,L,NE]
-	# rewrite	*wikimemory.org	//wikimedia.org
+	# rewrite	*wikimemory.org	//www.wikimedia.org
 	RewriteCond %{HTTP_HOST} =wikimemory.org
-	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://wikimedia.org$0 [R=301,L,NE]
-	# rewrite	*wikimemory.org	//wikimedia.org
+	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://www.wikimedia.org$0 [R=301,L,NE]
+	# rewrite	*wikimemory.org	//www.wikimedia.org
 	RewriteCond %{HTTP_HOST} ^(.+)\.wikimemory\.org$
-	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://wikimedia.org$0 [R=301,L,NE]
+	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://www.wikimedia.org$0 [R=301,L,NE]
 	# rewrite	*en-wp.com	//en.wikipedia.org
 	RewriteCond %{HTTP_HOST} =en-wp.com
 	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://en.wikipedia.org$0 [R=301,L,NE]
